-------------
Released on ...

Features:
- Inspection: Warn users if they have arguments with same value in section (see #263)
- Inspection: Comma in the end of section arg list isn't needed (see #255)
- Inspection: Warn user if rule from 'rulesorder' isn't available in current or included files (see #254)
- Inspection: Warn about string arguments split on several lines (see #259)
- Inspection: Warn users if they have callable arguments in sections that does not expect it (see #198)
- Inspection: Warn users if they have keyword arguments in sections that does not expect it (see #196)
- Inspection: Warn about usage of rule/checkpoint/subworkflow objects as arguments instead of one of its fields (see #257)

Fixed:
- Completion does not suggest top-level keywords in comments (see #178)

Version 0.8.0 build #0.8.0.214
-------------
Released on July 3th 2020

Features:
- PyCharm 2020.2 builds compatibility


Version 0.7.0 build #0.7.0.209
-------------
Released on July 2th 2020

Features:
- Inspection: warn about confusing reference in localrules section (see #287)
- Inspection: Warn if mixed tabs and spaces (see #285)
- 'notebook' section parsing error (see #288)
- `envvars` isn't parsed properly (see #281)
- `container` top level and rule sections parsing (#291)
- Resolve/completion for paths in notebook section (see #289)
- Inspection: Conda environments are only allowed with shell, script, notebook,
    or wrapper directives (not with run). #290

Fixed:
- Rule not yet defined false positive for lambdas (see #286)
- Unresolved reference for 'rule' in 'run' section (see #283)
- Doesn't automatically create folding code element for "checkpoint" (see #273)
- Multiline shell commands in anonymous rules defined in loops (see #275)
- Do not warn about missing wildcards if no SmkSL injection in string (see #266)

Version 0.6.0 build #0.6.0.165
-------------
Released on April 12th 2019

Fixed:
- 2020.1 Compatibility (see #279)
- “cache:” rule section support (see #280)
