@@ -2,14 +2,23 @@ package com.jetbrains.snakecharm.stringLanguage.lang
 
 import com.intellij.lang.injection.MultiHostRegistrar
 import com.intellij.psi.PsiElement
+import com.intellij.psi.util.PsiTreeUtil
 import com.intellij.psi.util.elementType
 import com.jetbrains.python.codeInsight.PyInjectionUtil
 import com.jetbrains.python.codeInsight.PyInjectorBase
 import com.jetbrains.python.codeInsight.regexp.PythonRegexpLanguage
+import com.jetbrains.python.psi.PyArgumentList
+import com.jetbrains.python.psi.PyCallExpression
+import com.jetbrains.python.psi.PyReferenceExpression
 import com.jetbrains.python.psi.PyStringLiteralExpression
+import com.jetbrains.python.psi.impl.PyKeywordArgumentImpl
+import com.jetbrains.snakecharm.lang.SnakemakeLanguageDialect
+import com.jetbrains.snakecharm.lang.SnakemakeNames.WORKFLOW_WILDCARD_CONSTRAINTS_KEYWORD
+import com.jetbrains.snakecharm.lang.psi.SmkRuleOrCheckpointArgsSection
+import org.jetbrains.annotations.Nullable
 
 open class SmkSLPythonRegExpInjector : PyInjectorBase() {
-    override fun getInjectedLanguage(element: PsiElement) = PythonRegexpLanguage()
+    override fun getInjectedLanguage(element: PsiElement) = PythonRegexpLanguage.INSTANCE
 
     override fun elementsToInjectIn() = listOf(PyStringLiteralExpression::class.java)
 
@@ -21,10 +30,20 @@ open class SmkSLPythonRegExpInjector : PyInjectorBase() {
         else -> PyInjectionUtil.InjectionResult.EMPTY
     }
 
-    private fun PsiElement.isValidForInjection(): Boolean {
-        if (this.language == PythonRegexpLanguage()) {
-            return true
-        }
-        return false
+    private fun PsiElement.isInPyKeywordArgsSection(): Boolean {
+        val parentPyKeywordArgumentImpl = PsiTreeUtil.getParentOfType(this, PyKeywordArgumentImpl::class.java)
+
+        return (parentPyKeywordArgumentImpl != null && parentPyKeywordArgumentImpl.isInWildcardConstraintsSection())
     }
+
+    private fun PsiElement.isInWildcardConstraintsSection(): Boolean {
+        val parentSmkRuleOrCheckpointArgsSection = PsiTreeUtil.getParentOfType(this, SmkRuleOrCheckpointArgsSection::class.java)
+
+        return parentSmkRuleOrCheckpointArgsSection?.firstChild?.text == WORKFLOW_WILDCARD_CONSTRAINTS_KEYWORD
+    }
+
+    private fun PsiElement.isValidForInjection(): Boolean =
+            SnakemakeLanguageDialect.isInsideSmkFile(this) &&
+                    isInWildcardConstraintsSection() &&
+                    isInPyKeywordArgsSection()
 }
